[package]
name = "sx127xfsk"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D. Baker <jonathan@ardent.tech>"]
description = "A no-std driver for the FSK modem on Semtech Sx127x chips."
keywords = ["embedded", "embedded-hal-driver", "fsk"]
categories = ["embedded", "no-std"]
repository = "https://github.com/ardentTech/sx127x-fsk"
license = "MIT OR Apache-2.0"
exclude = ["CHANGELOG.md", "examples/*"]
readme = "README.md"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = "1.0.0"
maybe-async = "0.2.10"
sx127x-common = "0.2.0"

[dev-dependencies]
approx = "0.6.0-rc2"

[features]
default = []
defmt = ["dep:defmt"]
sync = ["maybe-async/is_sync", "dep:embedded-hal"]